force-app/main/default/objects/MUSW__Milestone__c/fields/MUSW__Last_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Last_Task_Due_Date__c</fullName>
    <label>Last Task Due Date</label>
    <type>Date</type>
</CustomField>