force-app/main/default/objects/MUSW__Milestone__c/fields/MUSW__Original_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Original_Due_Date__c</fullName>
    <label>Original Due Date</label>
    <type>Date</type>
</CustomField>