force-app/main/default/objects/MUSW__Milestone__c/fields/MUSW__Related_To__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_To__c</fullName>
    <formula>IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = ""), 
IF(OR(ISNULL( MUSW__Project2__c ), MUSW__Project2__c = ""), 
"", HYPERLINK( "../" &amp; MUSW__Project2__c, MUSW__Project2__r.Name ,"_parent" )), 
HYPERLINK( "../" &amp; MUSW__Permit2__c,MUSW__Permit2__r.Name,"_parent" ))</formula>
    <label>Related To</label>
    <type>Text</type>
</CustomField>