force-app/main/default/objects/MUSW__Milestone__c/fields/MUSW__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>