force-app/main/default/objects/MUSW__Milestone__c/fields/MUSW__Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status_Icon__c</fullName>
    <formula>IMAGE( 
IF(AND(ISNULL(MUSW__End_Date__c), MUSW__Due_Date__c &lt; TODAY()), "/img/entitlement/casemilestone_isviolated.png", 
   IF(AND(ISNULL(MUSW__End_Date__c), MUSW__Due_Date__c &lt; MUSW__Last_Task_Due_Date__c), "https://letterbatch.mybasicgov.com/img/redwarning.gif",
    IF (MUSW__End_Date__c &lt;= MUSW__Due_Date__c, "/img/entitlement/casemilestone_iscompleted.gif", 
      IF (MUSW__End_Date__c > MUSW__Due_Date__c, "/img/icon/warning16.png", 
   "/s.gif"
   )
  )
 )
),
""
)</formula>
    <label>Action</label>
    <type>Text</type>
</CustomField>